# wistime

./: Cargo.toml  LICENSE
src/: app.rs  bricks_text.rs  main.rs
src/app/: modes.rs
src/app/modes/: clock.rs  stopwatch.rs  timer.rs
src/bricks_text/: chars.rs
