[package]
name = "wistime"
version = "0.1.0"
edition = "2021"
authors = ["Soumyadip Moni <avater.clasher@gmail.com"]
license = "MIT"
categories = ["command-line-utilities", "timer", "time-utility"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.5"
clap = { version = "3.2.12", features = ["derive"] }
crossterm = "0.27.0"
regex = "1.10.3"
tui = "0.19.0"
